BLZG-1269 commit for a manual merge into master to rebaseline the maven branch into master.